[workspace]
members = [
    "crates/use-astronomy",
    "crates/use-celestial-body",
    "crates/use-star",
    "crates/use-planet",
    "crates/use-moon",
    "crates/use-orbit",
    "crates/use-orbital-element",
    "crates/use-astronomical-coordinate",
    "crates/use-magnitude",
    "crates/use-epoch",
    "crates/use-constellation",
    "crates/use-astronomical-observation",
    "crates/use-catalog-object",
]
resolver = "3"

[workspace.package]
authors = ["RustUse Contributors"]
edition = "2024"
homepage = "https://rustuse.org"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/RustUse/use-astronomy"
rust-version = "1.95.0"
version = "0.1.0"

[workspace.dependencies]
use-astronomical-coordinate = { version = "0.1.0", path = "crates/use-astronomical-coordinate" }
use-astronomical-observation = { version = "0.1.0", path = "crates/use-astronomical-observation" }
use-astronomical-orbit = { version = "0.1.0", path = "crates/use-orbit" }
use-astronomy = { version = "0.1.0", path = "crates/use-astronomy" }
use-catalog-object = { version = "0.1.0", path = "crates/use-catalog-object" }
use-celestial-body = { version = "0.1.0", path = "crates/use-celestial-body" }
use-constellation = { version = "0.1.0", path = "crates/use-constellation" }
use-epoch = { version = "0.1.0", path = "crates/use-epoch" }
use-magnitude = { version = "0.1.0", path = "crates/use-magnitude" }
use-moon = { version = "0.1.0", path = "crates/use-moon" }
use-orbital-element = { version = "0.1.0", path = "crates/use-orbital-element" }
use-planet = { version = "0.1.0", path = "crates/use-planet" }
use-star = { version = "0.1.0", path = "crates/use-star" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.metadata.rustuse.release]
publish = false
versioning = "lockstep-0.x"
first-publish-candidates = [
    "use-celestial-body",
    "use-star",
    "use-planet",
    "use-moon",
    "use-astronomical-orbit",
    "use-orbital-element",
    "use-astronomical-coordinate",
    "use-magnitude",
    "use-epoch",
    "use-constellation",
    "use-astronomical-observation",
    "use-catalog-object",
]
