[package]
name = "use-catalog-object"
description = "Primitive astronomical catalog object vocabulary for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-catalog-object"
keywords = ["astronomy", "catalog", "designation", "messier", "rustuse"]
categories = ["data-structures", "science"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
