[package]
name = "use-celestial-body"
description = "Primitive celestial body vocabulary for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-celestial-body"
keywords = ["astronomy", "celestial-body", "vocabulary", "catalog", "rustuse"]
categories = ["data-structures", "science"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
