[package]
name = "use-astronomical-orbit"
description = "Primitive orbit vocabulary for RustUse astronomy"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-astronomical-orbit"
keywords = ["astronomy", "orbit", "orbital", "vocabulary", "rustuse"]
categories = ["data-structures", "science"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
