[package]
name = "use-orbital-element"
description = "Primitive orbital element vocabulary for RustUse astronomy"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-orbital-element"
keywords = ["astronomy", "orbit", "orbital-element", "eccentricity", "rustuse"]
categories = ["data-structures", "science"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true